--- a/.xcodebump.cfg
+++ b/.xcodebump.cfg
@@ -16,12 +16,20 @@ BUILDVER_START="1.0.0"
 # build number start - only used if no build number is found
 BUILDNUM_START=1
 
+# tag prefix - a string that is prepended to the generated commit tag
+#
+# NOTE: The string, if not empty, will be followed by a dash (-) character when
+# prepended to the generated tag. Set this to an empty string to disable.
+#
+TAG_PREFIX="build"
+
 # PATHs
 PATH_GIT="/usr/local/bin/git"
 
 #PATH_CUT="/usr/bin/cut"
 #PATH_CUT="/usr/bin/cut"
 #PATH_HEAD="/usr/bin/head"
+#PATH_FIND="/usr/bin/find"
 
 # Install gnu grep via homebrew... (this will not symlink for you)
 #
