Updated xcodebump.cfg to point to new repo.

--- a/.xcodebump.cfg
+++ b/.xcodebump.cfg
@@ -25,7 +25,7 @@ TAG_PREFIX="build"
 
 # podspec support
 #
-PODSPEC_URL="https://github.com/markeissler/Reader.git"
+PODSPEC_URL="https://github.com/markeissler/PDFReader.git"
 # PODSPEC_BRANCH_REL="master"
 # PODSPEC_BRANCH_DEV="develop"
 
