Updated xcodebump config.

--- a/.xcodebump.cfg
+++ b/.xcodebump.cfg
@@ -8,7 +8,7 @@
 #
 
 # specify target
-TARGETNAME="Reader"
+TARGETNAME="PDFReader"
 
 # release version start - only used if no release version is found
 BUILDVER_START="1.0.0"
